--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
 <body>
     <div class="container">
 
-        <form name="form1" id="login__form" method="post">
+        <form name="form1" id="login__form">
             <div class="login-form__container" style="background-image: url('assets/images/suai-space.jpg');">
                 <div class="login-form__wrapper">
-                    <span class="login-form__title">4031</span>
 
                     <div class="login-form validate-form">
 
@@ -43,14 +42,16 @@
                         </div>
 
                         <div class="container-login-form__btn">
-                            <button class="login-form__btn" type="submit">Sign
-                                up
-                            </button>
+                            <a href="https://new-pro.guap.ru/">
+                                <button class="login-form__btn">Войти в ЛК
+                                </button>
+                            </a>
                         </div>
 
                         <div id="errorMsg" class="errors__info"></div>
                     </div>
 
+                    <span class="login-form__title">4031</span>
                 </div>
             </div>
         </form>
