fields redirection upd

--- a/index.html
+++ b/index.html
@@ -19,39 +19,45 @@
             <div class="login-form__container" style="background-image: url('assets/images/suai-space.jpg');">
                 <div class="login-form__wrapper">
 
+                    <span class="login-form__title">4031</span>
+
                     <div class="login-form validate-form">
 
-                        <div class="wrap-input validate-input" data-validate="Enter username">
-                            <input class="input" id="login__input" type="text" name="username" minlength=2
-                                placeholder="Type username" autofocus required>
+                        <div class="wrap-input validate-input">
+                            <a href="https://guap.ru/rasp/?g=288">
+                                <input class="input" id="login__input" type="text" placeholder="Расписание">
+                            </a>
                         </div>
 
-                        <div class="wrap-input validate-input" data-validate="Enter password">
-                            <input class="input" id="password__input" type="password" minlength=5 name="password"
-                                placeholder="Type password" required>
+                        <div class="wrap-input validate-input">
+                            <a
+                                href="https://docs.google.com/spreadsheets/d/1iPESVImE09zgAf8kTTQakc4qT6ZSPoSVT1SuEfqe3Ug/edit#gid=1480937978">
+                                <input class="input" id="password__input" type="text" placeholder="Гугл-таблица общая">
+                            </a>
                         </div>
 
-                        <div class="wrap-input validate-input" data-validate="Enter email">
-                            <input class="input" id="email__input" type="email" name="email" placeholder="Type email"
-                                required>
+                        <div class="wrap-input validate-input">
+                            <a
+                                href="https://docs.google.com/spreadsheets/d/15yVKYIUea6gj2wTWR1ndPzeGENDyBIxo1eHZDkRljUI/edit#gid=0">
+                                <input class="input" id="email__input" type="text" placeholder="Гугл-таблица ОС">
+                            </a>
                         </div>
 
-                        <div class="wrap-input validate-input" data-validate="Enter your phone">
-                            <input class="input" id="phone__input" type="tel" pattern="\d{6,20}" minlength=6
-                                maxlength=20 name="phone number" placeholder="Type your phone" required>
+                        <div class="wrap-input validate-input">
+                            <a
+                                href="https://docs.google.com/spreadsheets/d/1b7XpzvFe7qw4cJhG-KXbX872QgjUXWSSIOWrBLKSeqc/edit#gid=0">
+                                <input class="input" id="phone__input" type="text" placeholder="Гугл-таблица ППС">
+                            </a>
                         </div>
 
                         <div class="container-login-form__btn">
-                            <a href="https://new-pro.guap.ru/">
-                                <button class="login-form__btn">Войти в ЛК
-                                </button>
-                            </a>
+                            <button class="login-form__btn">Войти в ЛК
+                            </button>
                         </div>
 
                         <div id="errorMsg" class="errors__info"></div>
                     </div>
 
-                    <span class="login-form__title">4031</span>
                 </div>
             </div>
         </form>
