--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         </div>
 
                         <div class="container-login-form__btn">
-                            <button class="login-form__btn">Войти в ЛК
+                            <button class="login-form__btn" type="button">Войти в ЛК
                             </button>
                         </div>
 
