--- a/index.html
+++ b/index.html
@@ -25,28 +25,34 @@
 
                         <div class="wrap-input validate-input">
                             <a href="https://guap.ru/rasp/?g=288">
-                                <input class="input" id="login__input" type="text" placeholder="Расписание">
+                                <input class="input" type="text" placeholder="Расписание">
                             </a>
                         </div>
 
                         <div class="wrap-input validate-input">
                             <a
                                 href="https://docs.google.com/spreadsheets/d/1iPESVImE09zgAf8kTTQakc4qT6ZSPoSVT1SuEfqe3Ug/edit#gid=1480937978">
-                                <input class="input" id="password__input" type="text" placeholder="Гугл-таблица общая">
+                                <input class="input" type="text" placeholder="Гугл-таблица общая">
                             </a>
                         </div>
 
                         <div class="wrap-input validate-input">
                             <a
                                 href="https://docs.google.com/spreadsheets/d/15yVKYIUea6gj2wTWR1ndPzeGENDyBIxo1eHZDkRljUI/edit#gid=0">
-                                <input class="input" id="email__input" type="text" placeholder="Гугл-таблица ОС">
+                                <input class="input" type="text" placeholder="Гугл-таблица ОС">
                             </a>
                         </div>
 
                         <div class="wrap-input validate-input">
                             <a
                                 href="https://docs.google.com/spreadsheets/d/1b7XpzvFe7qw4cJhG-KXbX872QgjUXWSSIOWrBLKSeqc/edit#gid=0">
-                                <input class="input" id="phone__input" type="text" placeholder="Гугл-таблица ППС">
+                                <input class="input" type="text" placeholder="Гугл-таблица ППС">
+                            </a>
+                        </div>
+
+                        <div class="wrap-input validate-input">
+                            <a href="https://disk.yandex.ru/d/Ef7WproflRrn1w">
+                                <input class="input" type="text" placeholder="Яндекс-архив ПВП">
                             </a>
                         </div>
 
