расписание сессии весна 2023

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                         </div>
 
                         <div class="wrap-input validate-input">
+                            <a href="https://raspsess.guap.ru/?g=218">
+                                <input class="input" type="text" placeholder="Сессия">
+                            </a>
+                        </div>
+
+                        <div class="wrap-input validate-input">
                             <a
                                 href="https://docs.google.com/spreadsheets/d/1iPESVImE09zgAf8kTTQakc4qT6ZSPoSVT1SuEfqe3Ug/edit#gid=1480937978">
                                 <input class="input" type="text" placeholder="Гугл-таблица общая">
