--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
                     <div class="login-form validate-form">
 
                         <div class="wrap-input validate-input">
-                            <a href="https://guap.ru/rasp/?g=288">
+                            <a href="https://guap.ru/rasp/?g=312">
                                 <input class="input" type="text" placeholder="Расписание">
                             </a>
                         </div>
 
-                        <div class="wrap-input validate-input">
+                        <!-- <div class="wrap-input validate-input">
                             <a href="https://raspsess.guap.ru/?g=218">
                                 <input class="input" type="text" placeholder="Сессия">
                             </a>
-                        </div>
+                        </div> -->
 
                         <div class="wrap-input validate-input">
                             <a
@@ -44,15 +44,15 @@
 
                         <div class="wrap-input validate-input">
                             <a
-                                href="https://docs.google.com/spreadsheets/d/15yVKYIUea6gj2wTWR1ndPzeGENDyBIxo1eHZDkRljUI/edit#gid=0">
-                                <input class="input" type="text" placeholder="Гугл-таблица ОС">
+                                href="https://docs.google.com/spreadsheets/d/1mkeboaf6lGz9qjgQL1s6h-aD3tnmEohKXY8VrcSIAGM/edit#gid=891426648">
+                                <input class="input" type="text" placeholder="Администрирование ВС">
                             </a>
                         </div>
 
                         <div class="wrap-input validate-input">
                             <a
-                                href="https://docs.google.com/spreadsheets/d/1b7XpzvFe7qw4cJhG-KXbX872QgjUXWSSIOWrBLKSeqc/edit#gid=0">
-                                <input class="input" type="text" placeholder="Гугл-таблица ППС">
+                                href="https://docs.google.com/spreadsheets/d/1uoE3kQH8oYfPoZ91oRath8XOn2dRg4JQ4Ec1Zog0bfw/edit#gid=891426648">
+                                <input class="input" type="text" placeholder="Теория ВП">
                             </a>
                         </div>
 
