расписание сессии осень'23

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                             </a>
                         </div>
 
-                        <!-- <div class="wrap-input validate-input">
-                            <a href="https://raspsess.guap.ru/?g=218">
+                        <div class="wrap-input validate-input">
+                            <a href="https://raspsess.guap.ru/?g=291">
                                 <input class="input" type="text" placeholder="Сессия">
                             </a>
-                        </div> -->
+                        </div>
 
                         <div class="wrap-input validate-input">
                             <a
