--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
                     <div class="login-form validate-form">
 
                         <div class="wrap-input validate-input">
-                            <a href="https://guap.ru/rasp/?g=311">
+                            <a href="https://guap.ru/rasp/?g=164">
                                 <input class="input" type="text" placeholder="Расписание">
                             </a>
                         </div>
 
-                        <div class="wrap-input validate-input">
+                        <!-- <div class="wrap-input validate-input">
                             <a href="https://raspsess.guap.ru/?g=291">
                                 <input class="input" type="text" placeholder="Сессия">
                             </a>
-                        </div>
+                        </div> -->
 
                         <div class="wrap-input validate-input">
                             <a
@@ -49,18 +49,18 @@
                             </a>
                         </div>
 
-                        <div class="wrap-input validate-input">
+                        <!-- <div class="wrap-input validate-input">
                             <a
                                 href="https://docs.google.com/spreadsheets/d/1uoE3kQH8oYfPoZ91oRath8XOn2dRg4JQ4Ec1Zog0bfw/edit#gid=891426648">
                                 <input class="input" type="text" placeholder="Теория ВП">
                             </a>
-                        </div>
+                        </div> -->
 
-                        <div class="wrap-input validate-input">
+                        <!-- <div class="wrap-input validate-input">
                             <a href="https://disk.yandex.ru/d/Ef7WproflRrn1w">
                                 <input class="input" type="text" placeholder="Яндекс-архив ПВП">
                             </a>
-                        </div>
+                        </div> -->
 
                         <div class="container-login-form__btn">
                             <button class="login-form__btn" type="button">Войти в ЛК
