добавлены материалы по СИИ

--- a/index.html
+++ b/index.html
@@ -36,25 +36,24 @@
                         </div> -->
 
                         <div class="wrap-input validate-input">
+                            <a href="https://cloud.mail.ru/public/4W7o/DfH5c9s63">
+                                <input class="input" type="text" placeholder="АВС Материалы">
+                            </a>
+                        </div>
+
+                        <div class="wrap-input validate-input">
+                            <a href="https://cloud.mail.ru/public/Fys7/t4y22Me58">
+                                <input class="input" type="text" placeholder="СИИ Материалы">
+                            </a>
+                        </div>
+
+
+                        <div class="wrap-input validate-input">
                             <a
                                 href="https://docs.google.com/spreadsheets/d/1iPESVImE09zgAf8kTTQakc4qT6ZSPoSVT1SuEfqe3Ug/edit#gid=1480937978">
                                 <input class="input" type="text" placeholder="Гугл-таблица общая">
                             </a>
                         </div>
-
-                        <div class="wrap-input validate-input">
-                            <a
-                                href="https://docs.google.com/spreadsheets/d/1mkeboaf6lGz9qjgQL1s6h-aD3tnmEohKXY8VrcSIAGM/edit#gid=891426648">
-                                <input class="input" type="text" placeholder="Администрирование ВС">
-                            </a>
-                        </div>
-
-                        <!-- <div class="wrap-input validate-input">
-                            <a
-                                href="https://docs.google.com/spreadsheets/d/1uoE3kQH8oYfPoZ91oRath8XOn2dRg4JQ4Ec1Zog0bfw/edit#gid=891426648">
-                                <input class="input" type="text" placeholder="Теория ВП">
-                            </a>
-                        </div> -->
 
                         <!-- <div class="wrap-input validate-input">
                             <a href="https://disk.yandex.ru/d/Ef7WproflRrn1w">
